login and signup stuff, error on login due to db

--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,9 @@
 
     <body>
         <h1>Food Site</h1>
-        <form>
-            Fill form
-        </form>
+        <h2>Welcome</h2>
     </body>
 
 </html>
+
 
