--- a/views/signup.html
+++ b/views/signup.html
@@ -39,6 +39,12 @@
                 <div style="color: red;">{{ error }}</div>
             {% endif %}
         </form>
+
+        <form action="/login" method="GET">
+            <button
+                type="submit"
+                class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition"
+            > Go to login </button>
     </div>
 
 </body>
